anhmv: - bổ sung quản lý kho - thay đổi dashboard backgournd

--- a/src/main/resources/language_vi.properties
+++ b/src/main/resources/language_vi.properties
@@ -496,11 +496,12 @@ profileMachine.list=S\u1ed5 tay xe m\u00e1y thi\u1ebft b\u1ecb
 profileMachine.list.stt=STT
 profileMachine.list.action=Thao t\u00e1c
 profileMachine.list.code=Bi\u1ec3n s\u1ed1 xe
-profileMachine.list.name=Nh\u00e3n hi\u1ec7u
+profileMachine.list.name=Ch\u1ee7ng lo\u1ea1i
+profileMachine.list.manufactoryName=Nh\u00e3n hi\u1ec7u
 profileMachine.list.manufactureCountry=N\u01b0\u1edbc s\u1ea3n xu\u1ea5t
 profileMachine.list.country=N\u01b0\u1edbc s\u1ea3n xu\u1ea5t
 profileMachine.list.manufactureYear=N\u0103m s\u1ea3n xu\u1ea5t
-profileMachine.list.type=Ch\u1ee7ng lo\u1ea1i
+profileMachine.list.type=Lo\u1ea1i xe
 profileMachine.list.wheelFormula=C\u00f4ng th\u1ee9c b\u00e1nh xe
 profileMachine.list.size=K\u00edch th\u01b0\u1edbc bao
 profileMachine.list.numberSeating=S\u1ed1 ch\u1ed7 ng\u1ed3i
@@ -515,3 +516,21 @@ profileMachine.list.wheelUse=L\u1ed1p s\u1eed d\u1ee5ng
 profileMachine.list.detail=H\u1ec7 th\u1ed1ng chuy\u00ean d\u00f9ng
 profileMachine.list.avatar=\u1ea2nh \u0111\u1ea1i di\u1ec7n
 profileMachine.list.avatarChange=Thay \u0111\u1ed5i
+profileMachine.list.employee=L\u00e1i xe
+
+maintainSub.list.stt=STT
+maintainSub.list.action=Thao t\u00e1c
+maintainSub.list.type=Lo\u1ea1i xe
+maintainSub.list.name=T\u00ean v\u1eadt t\u01b0
+maintainSub.list.quantity=S\u1ed1 l\u01b0\u1ee3ng
+maintainSub.list.unit=\u0110\u01a1n v\u1ecb t\u00ednh
+
+materialMngt.list.stt=STT
+materialMngt.list.action=Thao t\u00e1c
+materialMngt.list.code=M\u00e3 v\u1eadt t\u01b0
+materialMngt.list.name=T\u00ean v\u1eadt t\u01b0
+materialMngt.list.contractCode=H\u1ee3p \u0111\u1ed3ng cung c\u1ea5p v\u1eadt t\u01b0
+materialMngt.list.price=\u0110\u01a1n gi\u00e1 (VN\u0110)
+materialMngt.list.quantity=S\u1ed1 l\u01b0\u1ee3ng
+materialMngt.list.unit=\u0110\u01a1n v\u1ecb
+materialMngt.list.updatedTime=Th\u1eddi gian c\u1eadp nh\u1eadt
