anhmv : sửa trang chủ, sửa lại theo yêu cầu khách hàng

--- a/src/main/resources/language_vi.properties
+++ b/src/main/resources/language_vi.properties
@@ -517,7 +517,13 @@ profileMachine.list.detail=H\u1ec7 th\u1ed1ng chuy\u00ean d\u00f9ng
 profileMachine.list.avatar=\u1ea2nh \u0111\u1ea1i di\u1ec7n
 profileMachine.list.avatarChange=Thay \u0111\u1ed5i
 profileMachine.list.employee=L\u00e1i xe
+profileMachine.list.organization=\u0110\u01a1n v\u1ecb qu\u1ea3n l\u00fd
+profileMachine.list.insurance=Ng\u00e0y h\u1ebft h\u1ea1n b\u1ea3o hi\u1ec3m
+profileMachine.list.registry=Ng\u00e0y h\u1ebft h\u1ea1n \u0111\u0103ng ki\u1ec3m
+profileMachine.list.rubber=L\u1ea7n thay l\u1ed1p g\u1ea7n nh\u1ea5t
+profileMachine.list.batteryReplace=L\u1ea7n thay \u1eafc quy g\u1ea7n nh\u1ea5t
 
+maintainSub.list=\u0110inh m\u1ee9c v\u1eadt t\u01b0
 maintainSub.list.stt=STT
 maintainSub.list.action=Thao t\u00e1c
 maintainSub.list.type=Lo\u1ea1i xe
